intregrate the allure reporting